k8s/services/notification-service/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: notification
  labels:
    name: notification
