k8s/services/notification-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: notification
  labels:
    app: notification-service
spec:
  selector:
    app: notification-service
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
