k8s/services/notification-service/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: notification
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: notification-service-policy
  namespace: notification
spec:
  podSelector:
    matchLabels:
      app: notification-service
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: order
      ports:
        - port: 3000
  egress:
    - to:
        - ipBlock:
            cidr: 170.20.0.0/16
      ports:
        - port: 3306
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
